--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Unit tests - backend') {
             steps {
                 dir('bugtracker-backend') {
-                    go test -u ./...
+                    sh 'go test -u ./...'
                 }
             }
         }
