--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
             }
             steps {
                 dir('bugtracker-backend') {
-                    sh 'go test -u ./...'
+                    sh 'go test ./...'
                 }
             }
         }
