--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,18 +1,24 @@
-stage('Unit tests - backend') {
-    agent {
-        docker {
-            image 'snakee/golang-junit:1.21'
-            reuseNode true
-        }
-    }
-    steps {
-        dir('bugtracker-backend') {
-            sh '''
-              echo "USER=$(whoami)"
-              echo "HOME=$HOME"
-              env | sort
-            '''
-            sh 'go test ./...'
+pipeline {
+    agent any
+
+    stages {
+        stage('Unit tests - backend') {
+            agent {
+                docker {
+                    image 'snakee/golang-junit:1.21'
+                    reuseNode true
+                    }
+                    }
+                    steps {
+                        dir('bugtracker-backend') {
+                            sh '''
+                            echo "USER=$(whoami)"
+                            echo "HOME=$HOME"
+                            env | sort
+                            '''
+                            sh 'go test -v ./...'
+                        }
+                    }
         }
     }
 }
